# trainedml

./: .buildinfo.bak  DOC_UTILISATION.md  GESTION_PROJET.md  LICENSE  README.md  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  searchindex.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
_modules/: index.html  trainedml.html
_modules/trainedml/: analyzer.html  benchmark.html  cli.html  evaluation.html  figure.html  visualization.html
_modules/trainedml/data/: loader.html
_modules/trainedml/models/: base.html  knn.html  logistic.html  random_forest.html
_modules/trainedml/viz/: boxplot.html  (+13 more)
doc/: README.md
slides/: trainedml_presentation.tex
src/trainedml/: __init__.py  benchmark.py  cli.py
src/trainedml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trainedml/: DOC_UTILISATION.md  README.md  analyzer.html  bivariate.html  boxplot.html  correlation.html  distribution.html  heatmap.html  histogram.html  line.html  missing.html  multicollinearity.html  normality.html  outliers.html  profiling.html  requirements.txt  setup.py  target.html  visualization.html  vizs.html
trainedml/models/: knn.html  logistic.html  random_forest.html
trainedml/tests/: test_bivariate.py  test_boxplot.py  test_correlation.py  test_distribution.py  test_missing.py  test_multicollinearity.py  test_normality.py  test_outliers.py  test_profiling.py  test_target.py
trainedml_webapp/: requirements.txt
trainedml_webapp/doc/: streamlit_app.md  streamlit_app_ligne_par_ligne.md
trainedml_webapp/src/: app.py
(+12 files in other folders)
