[project]
name = "trainedml"
version = "0.1.0"
description = "Machine learning core package for webapp and scripts"
authors = [{name = "Elève", email = "email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["trainedml"]
